[package]
name = "lib"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0.86"
once_cell = "1.8.0"
libc = "0.2.98"
lazy_static = "1.4.0"
nix = "0.24.1"
log = "0.4"
config = "0.13.1"
strum = { version = "0.24", features = ["derive"] }
utoipa = { version = "3", features = ["rocket_extras"] }